// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sanitize detail should work 1`] = `
Object {
  "allowedBaggage": Object {
    "additionalBaggage": Array [],
    "cabin": Array [
      Object {
        "height": 20,
        "length": 55,
        "note": null,
        "weight": 8,
        "width": 44,
      },
      Object {
        "height": null,
        "length": null,
        "note": null,
        "weight": null,
        "width": null,
      },
    ],
    "checked": Array [
      Object {
        "height": 81,
        "length": 119,
        "note": null,
        "weight": 23,
        "width": 119,
      },
    ],
  },
  "arrival": Object {
    "when": Object {
      "local": 2017-09-11T11:40:00.000Z,
      "utc": 2017-09-11T09:40:00.000Z,
    },
    "where": Object {
      "cityId": "gdansk_pl",
      "cityName": "Gdansk",
      "code": "GDN",
    },
  },
  "assets": Object {
    "invoiceUrl": "https://booking.skypicker.com/api/v0.1/get_file/2968389?file_id=337020126&simple_token=b9cb406d-f797-434c-bc21-a0612b92f201",
    "ticketUrl": "https://skypicker-mailing.s3.amazonaws.com/2968/1493837026_E-ticket_passenger_8394a1c13f8dcdce559085cfbbb6cc00.pdf?v=1493837026",
  },
  "authToken": "b9cb406d-f797-434c-bc21-a0612b92f201",
  "bookedServices": Array [
    Object {
      "category": "bags",
      "status": "closed",
    },
  ],
  "departure": Object {
    "when": Object {
      "local": 2017-09-11T09:05:00.000Z,
      "utc": 2017-09-11T07:05:00.000Z,
    },
    "where": Object {
      "cityId": "rzeszow_pl",
      "cityName": "Rzeszow",
      "code": "RZE",
    },
  },
  "id": 2968389,
  "legs": Array [
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T09:55:00.000Z,
          "utc": 2017-09-11T07:55:00.000Z,
        },
        "where": Object {
          "cityId": "warsaw_pl",
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T09:05:00.000Z,
          "utc": 2017-09-11T07:05:00.000Z,
        },
        "where": Object {
          "cityId": "rzeszow_pl",
          "cityName": "Rzeszow",
          "code": "RZE",
        },
      },
      "flightNo": 3806,
      "id": "SP1123103_1678073",
      "isReturn": false,
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T11:40:00.000Z,
          "utc": 2017-09-11T09:40:00.000Z,
        },
        "where": Object {
          "cityId": "gdansk_pl",
          "cityName": "Gdansk",
          "code": "GDN",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T10:45:00.000Z,
          "utc": 2017-09-11T08:45:00.000Z,
        },
        "where": Object {
          "cityId": "warsaw_pl",
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "flightNo": 3835,
      "id": "SP1123103_1678074",
      "isReturn": false,
      "recheckRequired": false,
    },
  ],
  "passengerCount": 1,
  "price": Object {
    "amount": 1082,
    "currency": "CZK",
  },
  "status": "confirmed",
  "type": "BookingOneWay",
}
`;

exports[`Sanitize list item should work 1`] = `
Object {
  "arrival": Object {
    "when": Object {
      "local": 2017-09-11T11:40:00.000Z,
      "utc": 2017-09-11T09:40:00.000Z,
    },
    "where": Object {
      "cityId": "gdansk_pl",
      "cityName": "Gdansk",
      "code": "GDN",
    },
  },
  "authToken": "b9cb406d-f797-434c-bc21-a0612b92f201",
  "departure": Object {
    "when": Object {
      "local": 2017-09-11T09:05:00.000Z,
      "utc": 2017-09-11T07:05:00.000Z,
    },
    "where": Object {
      "cityId": "rzeszow_pl",
      "cityName": "Rzeszow",
      "code": "RZE",
    },
  },
  "id": 2968389,
  "legs": Array [
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T09:55:00.000Z,
          "utc": 2017-09-11T07:55:00.000Z,
        },
        "where": Object {
          "cityId": "warsaw_pl",
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T09:05:00.000Z,
          "utc": 2017-09-11T07:05:00.000Z,
        },
        "where": Object {
          "cityId": "rzeszow_pl",
          "cityName": "Rzeszow",
          "code": "RZE",
        },
      },
      "flightNo": 3806,
      "id": "SP1123103_1678073",
      "isReturn": false,
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "LO",
      "arrival": Object {
        "when": Object {
          "local": 2017-09-11T11:40:00.000Z,
          "utc": 2017-09-11T09:40:00.000Z,
        },
        "where": Object {
          "cityId": "gdansk_pl",
          "cityName": "Gdansk",
          "code": "GDN",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-09-11T10:45:00.000Z,
          "utc": 2017-09-11T08:45:00.000Z,
        },
        "where": Object {
          "cityId": "warsaw_pl",
          "cityName": "Warsaw",
          "code": "WAW",
        },
      },
      "flightNo": 3835,
      "id": "SP1123103_1678074",
      "isReturn": false,
      "recheckRequired": false,
    },
  ],
  "passengerCount": 1,
  "price": Object {
    "amount": 1082,
    "currency": "CZK",
  },
  "status": "confirmed",
  "type": "BookingOneWay",
}
`;

exports[`Sanitize list item should work with return flight 1`] = `
Object {
  "arrival": Object {
    "when": Object {
      "local": 2017-07-09T21:20:00.000Z,
      "utc": 2017-07-09T19:20:00.000Z,
    },
    "where": Object {
      "cityId": "prague_cz",
      "cityName": "Prague",
      "code": "PRG",
    },
  },
  "authToken": "random_auth_token",
  "departure": Object {
    "when": Object {
      "local": 2017-06-28T12:05:00.000Z,
      "utc": 2017-06-28T10:05:00.000Z,
    },
    "where": Object {
      "cityId": "prague_cz",
      "cityName": "Prague",
      "code": "PRG",
    },
  },
  "id": 3222550,
  "inbound": Object {
    "arrival": Object {
      "when": Object {
        "local": 2017-07-09T21:20:00.000Z,
        "utc": 2017-07-09T19:20:00.000Z,
      },
      "where": Object {
        "cityId": "prague_cz",
        "cityName": "Prague",
        "code": "PRG",
      },
    },
    "departure": Object {
      "when": Object {
        "local": 2017-07-09T12:45:00.000Z,
        "utc": 2017-07-09T03:45:00.000Z,
      },
      "where": Object {
        "cityId": "tokyo_jp",
        "cityName": "Tokyo",
        "code": "NRT",
      },
    },
    "legs": Array [
      Object {
        "airlineCode": "AZ",
        "arrival": Object {
          "when": Object {
            "local": 2017-07-09T18:30:00.000Z,
            "utc": 2017-07-09T16:30:00.000Z,
          },
          "where": Object {
            "cityId": "milan_it",
            "cityName": "Milan",
            "code": "MXP",
          },
        },
        "departure": Object {
          "when": Object {
            "local": 2017-07-09T12:45:00.000Z,
            "utc": 2017-07-09T03:45:00.000Z,
          },
          "where": Object {
            "cityId": "tokyo_jp",
            "cityName": "Tokyo",
            "code": "NRT",
          },
        },
        "flightNo": 787,
        "id": "SP1244683_1864800",
        "isReturn": true,
        "recheckRequired": false,
      },
      Object {
        "airlineCode": "AZ",
        "arrival": Object {
          "when": Object {
            "local": 2017-07-09T21:20:00.000Z,
            "utc": 2017-07-09T19:20:00.000Z,
          },
          "where": Object {
            "cityId": "prague_cz",
            "cityName": "Prague",
            "code": "PRG",
          },
        },
        "departure": Object {
          "when": Object {
            "local": 2017-07-09T19:50:00.000Z,
            "utc": 2017-07-09T17:50:00.000Z,
          },
          "where": Object {
            "cityId": "milan_it",
            "cityName": "Milan",
            "code": "MXP",
          },
        },
        "flightNo": 7544,
        "id": "SP1244683_1864801",
        "isReturn": true,
        "recheckRequired": false,
      },
    ],
  },
  "legs": Array [
    Object {
      "airlineCode": "AZ",
      "arrival": Object {
        "when": Object {
          "local": 2017-06-28T14:00:00.000Z,
          "utc": 2017-06-28T12:00:00.000Z,
        },
        "where": Object {
          "cityId": "rome_it",
          "cityName": "Rome",
          "code": "FCO",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-06-28T12:05:00.000Z,
          "utc": 2017-06-28T10:05:00.000Z,
        },
        "where": Object {
          "cityId": "prague_cz",
          "cityName": "Prague",
          "code": "PRG",
        },
      },
      "flightNo": 7545,
      "id": "SP1244683_1864798",
      "isReturn": false,
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "AZ",
      "arrival": Object {
        "when": Object {
          "local": 2017-06-29T10:30:00.000Z,
          "utc": 2017-06-29T01:30:00.000Z,
        },
        "where": Object {
          "cityId": "tokyo_jp",
          "cityName": "Tokyo",
          "code": "NRT",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-06-28T15:15:00.000Z,
          "utc": 2017-06-28T13:15:00.000Z,
        },
        "where": Object {
          "cityId": "rome_it",
          "cityName": "Rome",
          "code": "FCO",
        },
      },
      "flightNo": 784,
      "id": "SP1244683_1864799",
      "isReturn": false,
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "AZ",
      "arrival": Object {
        "when": Object {
          "local": 2017-07-09T18:30:00.000Z,
          "utc": 2017-07-09T16:30:00.000Z,
        },
        "where": Object {
          "cityId": "milan_it",
          "cityName": "Milan",
          "code": "MXP",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-07-09T12:45:00.000Z,
          "utc": 2017-07-09T03:45:00.000Z,
        },
        "where": Object {
          "cityId": "tokyo_jp",
          "cityName": "Tokyo",
          "code": "NRT",
        },
      },
      "flightNo": 787,
      "id": "SP1244683_1864800",
      "isReturn": true,
      "recheckRequired": false,
    },
    Object {
      "airlineCode": "AZ",
      "arrival": Object {
        "when": Object {
          "local": 2017-07-09T21:20:00.000Z,
          "utc": 2017-07-09T19:20:00.000Z,
        },
        "where": Object {
          "cityId": "prague_cz",
          "cityName": "Prague",
          "code": "PRG",
        },
      },
      "departure": Object {
        "when": Object {
          "local": 2017-07-09T19:50:00.000Z,
          "utc": 2017-07-09T17:50:00.000Z,
        },
        "where": Object {
          "cityId": "milan_it",
          "cityName": "Milan",
          "code": "MXP",
        },
      },
      "flightNo": 7544,
      "id": "SP1244683_1864801",
      "isReturn": true,
      "recheckRequired": false,
    },
  ],
  "outbound": Object {
    "arrival": Object {
      "when": Object {
        "local": 2017-06-29T10:30:00.000Z,
        "utc": 2017-06-29T01:30:00.000Z,
      },
      "where": Object {
        "cityId": "tokyo_jp",
        "cityName": "Tokyo",
        "code": "NRT",
      },
    },
    "departure": Object {
      "when": Object {
        "local": 2017-06-28T12:05:00.000Z,
        "utc": 2017-06-28T10:05:00.000Z,
      },
      "where": Object {
        "cityId": "prague_cz",
        "cityName": "Prague",
        "code": "PRG",
      },
    },
    "legs": Array [
      Object {
        "airlineCode": "AZ",
        "arrival": Object {
          "when": Object {
            "local": 2017-06-28T14:00:00.000Z,
            "utc": 2017-06-28T12:00:00.000Z,
          },
          "where": Object {
            "cityId": "rome_it",
            "cityName": "Rome",
            "code": "FCO",
          },
        },
        "departure": Object {
          "when": Object {
            "local": 2017-06-28T12:05:00.000Z,
            "utc": 2017-06-28T10:05:00.000Z,
          },
          "where": Object {
            "cityId": "prague_cz",
            "cityName": "Prague",
            "code": "PRG",
          },
        },
        "flightNo": 7545,
        "id": "SP1244683_1864798",
        "isReturn": false,
        "recheckRequired": false,
      },
      Object {
        "airlineCode": "AZ",
        "arrival": Object {
          "when": Object {
            "local": 2017-06-29T10:30:00.000Z,
            "utc": 2017-06-29T01:30:00.000Z,
          },
          "where": Object {
            "cityId": "tokyo_jp",
            "cityName": "Tokyo",
            "code": "NRT",
          },
        },
        "departure": Object {
          "when": Object {
            "local": 2017-06-28T15:15:00.000Z,
            "utc": 2017-06-28T13:15:00.000Z,
          },
          "where": Object {
            "cityId": "rome_it",
            "cityName": "Rome",
            "code": "FCO",
          },
        },
        "flightNo": 784,
        "id": "SP1244683_1864799",
        "isReturn": false,
        "recheckRequired": false,
      },
    ],
  },
  "passengerCount": 2,
  "price": Object {
    "amount": 38867,
    "currency": "CZK",
  },
  "status": "confirmed",
  "type": "BookingReturn",
}
`;
